redoing node server

--- a/dest/index.html
+++ b/dest/index.html
@@ -27,7 +27,12 @@
           <h2>Subtítulo de la primera entrada</h2>
         </hgroup>
         <p>Publicada el 12-01-2013</p>
-      </header>Texto de la primera entrada
+      </header>Texto de la primera entrada<span>mi coche es</span>
+      <mark>rojo</mark><em>enfasis</em><strong>fuerza</strong><b>negrita</b><i>voz alternativo</i>
+      <details>
+        <summary>pulsa para agrandar</summary>
+        <p>hola hola!</p>
+      </details>
       <figure><a class="polaroid"><img src="http://minkbooks.com/content/myimage.jpg">
           <figcaption>Imagen de la primera entrada</figcaption></a></figure>
       <footer>
