--- a/dest/index.html
+++ b/dest/index.html
@@ -2,9 +2,10 @@
 <html lang="es"></html>
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Éste es un ejemplo de HTML5">
+  <meta name="description" content="HTML5_features">
   <meta name="keywords" content="HTML5, CSS3, JavaScript">
-  <title>Éste es el título del documento</title>
+  <title>HTML5</title>
+  <link href="http://abser-t.com/imgs/html5.png" rel="shortcut icon" type="image/x-icon">
   <link rel="stylesheet" href="css/styl.min.css">
 </head>
 <body>
